# scom

./: .scom.config  Cargo.toml  README.md
gscom/: Cargo.toml
gscom/src/: dropdown.rs  input_panel.rs  main.rs  menubar.rs  output_panel.rs  panel.rs  port_panel.rs  status_panel.rs  style.css
scom/: Cargo.toml
scom/src/: baud_rate.rs  config.rs  data_bit.rs  data_bits.rs  data_format.rs  flow_control.rs  handshake.rs  hexstring.rs  lib.rs  parity.rs  stop_bit.rs  stop_bits.rs
