[package]
name = "gscom"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glib = "0.20"
gio = "0.20"
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_8"] }
scom = { path="../scom" }
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_2"] }

[build-dependencies]
glib-build-tools = "0.20"
